SpecFunc: Deprecated IsNormal

--- a/TODO
+++ b/TODO
@@ -8,3 +8,4 @@ Remove deprecated method DistributionFactory.setKnownParameter(Point, Indices)
 Remove deprecated method Graph.setDrawable(Drawable, int)
 Remove DeconditionedDistribution alias in some future version
 Remove DeconditionedRandomVector alias in some future version
+Remove deprecated SpecFunc::IsNormal method in some future version
