--- a/ChangeLog
+++ b/ChangeLog
@@ -24,6 +24,7 @@
  * PointToFieldFunctionaChaosAlgorithm left the experimental module
  * Deprecated DeconditionedDistribution in favor of CompoundDistribution
  * Deprecated DeconditionedRandomVector in favor of CompoundRandomVector
+ * Deprecated SpecFunc.IsNormal (use std::isfinite or math.isfinite)
 
 === Documentation ===
 
