--- a/distro/debian/changelog
+++ b/distro/debian/changelog
@@ -1,3 +1,9 @@
+openturns (1.26-1) experimental; urgency=medium
+
+  * New upstream release
+
+ -- Julien Schueller <schueller@phimeca.com>  Thu, 20 Nov 2025 08:19:33 +0100
+
 openturns (1.25-1) experimental; urgency=medium
 
   * New upstream release
