--- a/TODO
+++ b/TODO
@@ -9,3 +9,4 @@ Remove deprecated method Graph.setDrawable(Drawable, int)
 Remove DeconditionedDistribution alias in some future version
 Remove DeconditionedRandomVector alias in some future version
 Remove deprecated SpecFunc::IsNormal method in some future version
+Remove deprecated ResourceMap::Reload method in some future version
