Full update after comments from review

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,4 +1,4 @@
-@Inbook{Baudin:2016,
+@Inbook{baudin2016,
   author="Baudin, Micha{\"e}l and Dutfoy, Anne and Iooss, Bertrand and Popelin, Anne-Laure",
   title="{OpenTURNS}: An Industrial Software for Uncertainty Quantification in Simulation. In: Ghanem R., Higdon D., Owhadi H. (eds) Handbook of Uncertainty Quantification.",
   year="2016",
@@ -10,39 +10,7 @@
   url="https://doi.org/10.1007/978-3-319-11259-6_64-1"
 }
 
-@inproceedings{Bryla:2022,
-  author    = {Bryla, P. and Ardillon, E. and Dumas, A. and Dutfoy-Lebrun, A.},
-  title     = {{Logiciel Persalys-Penstock pour l'estimation de la fiabilité des conduites forcées soumises à la corrosion: développements et applications}},
-  booktitle = {Congrès Lambda Mu 23 «Innovations et maîtrise des risques pour un avenir durable» - 23e Congrès de Maîtrise des Risques et de Sûreté de Fonctionnement},
-  month     = oct,
-  year      = {2022},
-}
-
-@inproceedings{Baudin:2021,
-  author    = {Baudin, Michaël and Lebrun, Régis},
-  title     = {Linear Algebra Of Linear And Nonlinear Bayesian Calibration},
-  booktitle = {UNCECOMP 2021. 4th ECCOMAS Thematic Conference on Uncertainty Quantification in Computational Sciences and Engineering},
-  editor    = {Papadrakakis, M. and Papadopoulos, V. and Stefanou, G.},
-  year      = {2021},
-  address   = {Streamed from Athens, Greece},
-  month     = jun,
-  pages     = {},
-  note      = {27–30 June 2021},
-}
-
-@inproceedings{Fekhari:2021,
-  author    = {Fekhari, Elias and Baudin, Michaël and Chabridon, Vincent and Jebroun, Youssef},
-  title     = {Otbenchmark: An Open Source Python Package For Benchmarking And Validating Uncertainty Quantification Algorithms},
-  booktitle = {UNCECOMP 2021. 4th ECCOMAS Thematic Conference on Uncertainty Quantification in Computational Sciences and Engineering},
-  editor    = {Papadrakakis, M. and Papadopoulos, V. and Stefanou, G.},
-  year      = {2021},
-  address   = {Streamed from Athens, Greece},
-  month     = jun,
-  pages     = {},
-  note      = {27–30 June 2021},
-}
-
-@article{Dutfoy:2023,
+@article{dutfoy2023,
   author = {A. Dutfoy},
   year = {2023},
   title = {Uncertainty on estimated magnitudes: a new approach based on a {Poisson} point process of dimension 2},
@@ -60,12 +28,11 @@
 @misc{persalys,
   title = {Persalys: Graphical User Interface for Uncertainty Quantification},
   author = {{EDF} and {Phimeca Engineering}},
-  howpublished = {\url{https://www.persalys.fr/}},
-  year = {2025}
+  howpublished = {\url{https://www.persalys.fr/}}
 }
 
 @article{pedregosa2011scikit,
-  title={Scikit-learn: Machine learning in Python},
+  title={{Scikit-learn}: {Machine} learning in {Python}},
   author={Pedregosa, Fabian and Varoquaux, Ga{\"e}l and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and others},
   journal={the Journal of machine Learning research},
   volume={12},
@@ -74,14 +41,11 @@
   publisher={JMLR. org}
 }
 
-@article{seabold2010statsmodels,
-  title={Statsmodels: econometric and statistical modeling with python.},
-  author={Seabold, Skipper and Perktold, Josef and others},
-  journal={SciPy},
-  volume={7},
-  number={1},
-  pages={92--96},
-  year={2010}
+@inproceedings{seabold2010statsmodels,
+  title={statsmodels: Econometric and statistical modeling with {Python}},
+  author={Seabold, Skipper and Perktold, Josef},
+  booktitle={9th Python in Science Conference},
+  year={2010},
 }
 
 @article{Wicaksono2023,
@@ -113,4 +77,23 @@
   year    = {2020},
   doi     = {10.1038/s41592-019-0686-2},
   url     = {https://doi.org/10.1038/s41592-019-0686-2}
+}
+
+@Article{espoeys2025multifidelity,
+  title={Multifidelity Bayesian Sequential Optimization and Reliability Assessment for Aerospace Systems Design},
+  author={Espoeys, Romain and Brevault, Loic and Balesdent, Mathieu and Ricci, Sophie and Mycek, Paul},
+  journal={Journal of Aerospace Information Systems},
+  pages={1--24},
+  year={2025},
+  publisher={American Institute of Aeronautics and Astronautics}
+}
+
+@article{faure2024impact,
+  title={Impact of time resolution on estimation of energy savings using a copula-based calibration in UBEM},
+  author={Faure, Xavier and Lebrun, R{\'e}gis and Pasichnyi, Oleksii},
+  journal={Energy and Buildings},
+  volume={311},
+  pages={114134},
+  year={2024},
+  publisher={Elsevier}
 }
