--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
 ==== Major changes ====
 
 ==== New classes ====
+ * ConvexHullMesher
 
 ==== API changes ====
  * PointConditionalDistribution left the experimental module
